# kseri

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  PARALLEL_WORKFLOW.md  README_SERVER.md  build-wasm.sh  ecosystem.config.js  index.html  package-lock.json  package.json  serve.py
.cargo/: config.toml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  tasks.json
examples/: test_client.rs  test_ui.rs
src/: game_plugin.rs  lib.rs  main.rs
src/assets/: cards.rs  fonts.rs  generator.rs  mod.rs  palette.rs  patterns.rs  ui.rs
src/components/: card.rs  game_entity.rs  mod.rs  player.rs  table.rs  tests.rs
src/resources/: game_settings.rs  mod.rs  network_state.rs
src/server/: broadcaster.rs  connection.rs  game_engine.rs  messages.rs  mod.rs  session.rs
src/systems/: card_management.rs  game_logic.rs  input.rs  layout.rs  mod.rs  networking.rs  rendering.rs  state_transitions.rs  tests.rs  turn_management.rs  ui.rs  validation.rs
tests/: integration_test.rs  server_integration.rs
tests/visual/: CLAUDE.md  README.md  debug-wasm.js  run-all-tests.js  test-card-rendering-system.js  test-card-rendering.js  test-final.js  test-layout-managers.js  test-pm2-deployment.js  test-simple.js  test-visual-interactive.js  (+2 more)
web/: README.md  index.html
(+4 files in other folders)
