[package]
name = "kseri"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_state",
    "webgl2",
    "x11",
    "png",
    "default_font"
] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fix for WASM builds
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]


# Native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "Window",
    "Location",
    "Document",
    "Element",
    "HtmlElement"
]}
console_error_panic_hook = "0.1"

# Development dependencies
[profile.dev]
opt-level = 1

# Release optimization for WASM
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
